# Interact-LLM

./: .gitignore  README.md  makefile  pyproject.toml
src/interact_llm/: __init__.py  app.py
src/interact_llm/interfaces/: base_hf.py  chat.py  languages.py
