[project]
name = "interact-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MinaAlmasi" }
]
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "textual>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
